# .github

./: .e2e-marker  .env.example  .gitignore  .gitleaksignore  .ls-lint.yml  .markdownlint.json  .pr_agent.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile.github_action  Dockerfile.github_app  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  TEST_E2E.md  docker-compose.github_app.yml  docker-compose.github_app.yml.lxc  filebeat.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: AGENTS.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: 3-security-vulnerability.yml  config.yml
.github/scripts/: build_pages.py
.github/workflows/: 01_branch-to-pr.yml  02_issue-to-branch.yml  04_actionlint.yml  05_gitleaks.yml  07_dependency-review.yml  08_scorecard.yml  09_semantic-pr.yml  10_pr-review.yml  11_security-pr-review.yml  12_dependabot-auto-merge.yml  13_pr-auto-merge.yml  14_bot-auto-fix.yml  15_merged-pr-cleanup.yml  16_stale-repo-identifier.yml  17_pr-stale-bot.yml  18_repo-standardization.yml  19_issue-backfill.yml  20_readme-gen.yml  22_template-sync.yml  23_release-drafter.yml  24_release-notes.yml  25_release-publish.yml  26_elk-health-check.yml  27_elk-setup.yml  28_bot-health-monitor.yml  29_downstream-health-check.yml  30_runtime-health-check.yml  31_repo-health.yml  32_org-health-report.yml  33_drift-detector.yml  33_issue-maintenance.yml  34_auto-deploy.yml  34_readme-automation.yml  35_auto-hardcode-scan.yml  36_build-and-push-app.yml  37_ci-failure-issues.yml  38_e2e.yml  39_e2e-live.yml  40_repo-review-batch.yml  41_pages-deploy.yml  (+76 more)
.opencode/: lsp.json
.qa-tmp/: ulw-probe-1781138930.txt
.sisyphus/: ralph-loop.local.md
config/: repos.yaml
docs/: AGENTS.md  architecture.md  automation-enhancement-brainstorm.md  automation-probe.txt  defork-provenance.md  downstream-standardization.md  elk-evidence-demo.md  evolution-changelog.md  git-automation-masterplan.md  git-workflow-gap-analysis.md  github-profile-enhancement-brainstorm.md  gitops-validation-brainstorm.md  nas-build-cache.md  pr-agent-upstream-README.md  session-improvements-history.md
docs/review-templates/: code-review-template.md  documentation-checklist.md  security-review-template.md
github_action/: entrypoint.sh
jclee_bot/: AGENTS.md  __init__.py  app.py  app_automation.py  app_checks.py  context_guards.py  dispatch.py  downstream_ci_inventory.py  downstream_ci_issues.py  downstream_ci_runs.py  downstream_ci_sweep.py  git_auth.py  github_api_client.py  github_app_inventory.py  github_checks.py  github_retry.py  gitops_automation.py  issue_commands.py  issue_maintenance.py  issue_maintenance_rules.py  issue_management.py  json_boundary.py  native_health.py  native_health_checks.py  payload_parsing.py  pr_auto_merge.py  pr_maintenance.py  readme_automation.py  readme_job_worker.py  readme_jobs.py  readme_runner.py  repo_health_maintenance.py  repo_standardization.py  repo_standardization_docs.py  repo_standardization_endpoint.py  repo_standardization_github.py  repo_standardization_types.py  repository_metadata.py  repository_metadata_endpoint.py  workflow_current_sweep.py  (+4 more)
jclee_bot/checks/: AGENTS.md  __init__.py  actionlint_check.py  docs_policy.py  pr_metadata.py  secret_scan.py
jclee_bot/review_engine/: AGENTS.md  cli.py  cli_pip.py  config_loader.py  custom_merge_loader.py
pr_agent/: config_loader.py  custom_merge_loader.py
pr_agent/agent/: pr_agent.py
pr_agent/algo/: __init__.py  cli_args.py  git_patch_processing.py  language_handler.py  pr_processing.py  secret_masking.py  token_handler.py  utils.py
pr_agent/git_providers/: __init__.py  azuredevops_provider.py  bitbucket_provider.py  bitbucket_server_provider.py  codecommit_provider.py  gerrit_provider.py  git_provider.py  gitea_provider.py  github_provider.py  gitlab_provider.py  local_git_provider.py  utils.py
pr_agent/identity_providers/: __init__.py
pr_agent/log/: __init__.py
pr_agent/secret_providers/: __init__.py  aws_secrets_manager_provider.py
pr_agent/servers/: azuredevops_server_webhook.py  bitbucket_app.py  bitbucket_server_webhook.py  gitea_app.py  github_app.py  github_lambda_webhook.py  github_polling.py  gitlab_lambda_webhook.py  gitlab_webhook.py  gunicorn_config.py  monitoring.py  utils.py
pr_agent/settings/: configuration.toml  pr_hardcode_prompts.toml  pr_readme_prompts.toml  pr_reviewer_prompts.toml
pr_agent/tools/: pr_add_docs.py  pr_code_suggestions.py  pr_description.py  pr_generate_labels.py  pr_hardcode_detector.py  pr_help_docs.py  pr_help_message.py  pr_line_questions.py  pr_readme_generator.py  pr_reviewer.py  pr_similar_issue.py  pr_update_changelog.py  ticket_pr_compliance_check.py
scripts/: AGENTS.md  branch-protection.go  check_hardcode_scan_patterns_test.py  check_private_ips.py  check_private_ips_test.py  check_workflow_scripts.py  check_workflow_scripts_test.py  ci_failure_issues_skip_test.py  cliproxy_client.py  cliproxy_routing.py  deploy-to-repos.go  enable-native-security.sh  generate_readme.py  generate_readme_cleaning.py  generate_readme_prompts.py  generate_readme_retry.py  generate_readme_scan.py  gitleaks_install_resilient_test.py  go.mod  issue_classification_workflow_test.py  issue_classifier_js_test.py  llm_decide.py  llm_decide_policy.py  no_schedule_triggers_test.py  pr_review_runner.py  pr_review_runner_test.py  readme_mermaid_test.py  redact_exposed_secrets.py  repo_review.py  repo_review_batch.sh  setup-nas-build-cache.sh  setup_build_cache_test.py  setup_python_compatible_test.py  sync-secrets.go  test_llm_decide.py
scripts/evolution/: AGENTS.md  __init__.py  adapters.py  cli.py  errors.py  facade.py  fingerprint.py  models.py  refinement.py  regression.py  scoring.py  storage.py
templates/: CONTRIBUTING.md  README.md
tests/: AGENTS.md
tests/e2e/: AGENTS.md  conftest.py  test_health.py  test_webhooks.py
tests/e2e_live/: AGENTS.md  README.md  conftest.py  fleet_health_helpers.py  github_mutation.py  github_read.py  repo_config.py  (+10 more)
(+247 files in other folders)
