[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jclee-bot"
version = "0.3.1"

authors = [{ name = "QodoAI", email = "ofir.f@qodo.ai" }]

maintainers = [
  { name = "jclee941" },
]

description = "GitHub App automation platform for jclee941 repositories, backed by a homelab CLIProxyAPI deployment."
readme = "README.md"
requires-python = ">=3.12,<3.14"
keywords = ["AI", "Agents", "Pull Request", "Automation", "Code Review"]
license = { file = "LICENSE" }

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://github.com/jclee941/jclee-bot"
Documentation = "https://github.com/jclee941/jclee-bot#readme"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "jclee_bot*",
] # fork-owned jclee_bot package (includes the absorbed review engine).

[project.scripts]
jclee-bot = "jclee_bot.review_engine.cli:run"
github-bot = "jclee_bot.review_engine.cli:run"
pr-agent = "jclee_bot.review_engine.cli:run"

[tool.ruff]
line-length = 120

# The absorbed review engine (jclee_bot/review_engine/, formerly the upstream
# pr_agent fork) is linted for CORRECTNESS-class rules (the full E/F/B/I
# ruleset), but purely cosmetic findings (E501 line-wrapping, F541 f-strings
# without placeholders) are suppressed per-file below rather than mass-rewritten:
# restyling hundreds of inherited lines only adds churn without improving runtime
# safety. Fork-owned code (scripts/, tests/e2e/, tests/e2e_live/) is held to the
# full ruleset with no such suppression. See [tool.ruff.lint.per-file-ignores].

lint.select = [
  "E",    # Pyflakes
  "F",    # Pyflakes
  "B",    # flake8-bugbear
  "I001", # isort basic checks
  "I002", # isort missing-required-import
]

# First commit - only fixing isort
lint.fixable = [
  "I001", # isort basic checks
]

lint.unfixable = [
  "B", # Avoid trying to fix flake8-bugbear (`B`) violations.
]

lint.exclude = ["api/code_completions"]

lint.ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "E402",
] # Ignore `E402` (import violations) in all `__init__.py` files.

"jclee_bot/app.py" = [
  "I001",
]

# Absorbed review-engine tree: lint for correctness, but do not enforce cosmetic
# line-length (E501) or f-string-without-placeholder (F541) rewrites.
"jclee_bot/review_engine/**/*.py" = ["E501", "F541"]
"tests/unittest/**/*.py" = [
  "E501",
  "F541",
  # get_max_tokens() raises a bare Exception for unknown models upstream;
  # this test intentionally asserts on it until the production type narrows.
  "B017",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
tests = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--color=yes"
console_output_style = "progress"
markers = [
  "private_canary: tests that mutate the private canary repository (requires repo-scoped token)",
  "cliproxy_health: CLIProxyAPI health and model availability checks",
  "readonly: read-only live checks that do not mutate GitHub repositories",
  "security_review: static security review workflow policy checks",
  "app_health: jclee-bot GitHub App and infrastructure health checks",
]
